[package]
name = "localshare"
version = "0.1.0"
edition = "2021"

[dependencies]
hostname = "0.4.0"
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1.0", features = ["full"] }
ctrlc = "3.2"
reqwest = { version = "0.11", features = ["blocking"] }